--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,48 +1,57 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-p{
-    text-align: center;
+p {
+  text-align: center;
 }
 
 div.app {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 90%;
-    margin: 0 auto;
-    background-color: #ddd;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 90%;
+  margin: 0 auto;
+  background-color: #ddd;
 }
 
-header{
-    flex-basis: 30vh;
+header {
+  flex-basis: 30vh;
 
-    color:white;
+  color: white;
 }
 
 main {
-    display: flex;
-    flex-grow: 1;
-    padding: 30px 0;
-
+  display: flex;
+  flex-grow: 1;
+  padding: 30px 0;
 }
-section.page{
-    
-    flex-grow:1;
+section.page {
+  flex-grow: 1;
 }
 
 aside {
-    min-width: 240px;
-    
+  min-width: 240px;
 }
 
-
-footer{
-    background-color: black;
-    color:white;
-    padding: 10px 0;
-    text-align: center;
-    text-transform: uppercase;
+footer {
+  background-color: black;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+article {
+  margin-top: 40px;
+}
+article h3 {
+  margin-bottom: 10px;
+}
+article span {
+  font-size: 0.7rem;
+}
+article p {
+  text-align: left;
 }
